[tool.poetry]
name = "fastapi-ml-template"
version = "0.1.0"
description = ""
authors = ["LEE HYUN SEUNG <47444387+hslrock@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
